// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAssetSearch.vue [Empty Search Input]: should be rendered correctly 1`] = `
<div
  class="add-asset-token"
>
  <div
    class="add-asset-token__page"
  >
    <search-input-stub
      autofocus="true"
      class="add-asset-token__search"
      maxlength="100"
      placeholder="Search by Asset ID, Name or Ticker Symbol"
      value=""
    />
     
    <div
      class="add-asset-token__switch-btn"
    >
      <s-switch-stub
        activeiconСlass=""
        activetext=""
        activevalue="true"
        inactiveiconСlass=""
        inactivetext=""
        name=""
        usedesignsystem="true"
        value="true"
        width="40"
      />
       
      <span>
        Verified assets only
      </span>
    </div>
     
    <synthetic-switcher-stub
      class="add-asset-token__switch-btn"
    />
     
    <div
      class="asset-list asset-search-list"
    >
      <recycle-scroller
        buffer="NaN"
        class="asset-list-inner hidden-scrollbar"
        item-size="NaN"
        items=""
        key-field="address"
        style="margin-right: 0px;"
      />
       
      <div
        class="scrollbar asset-list-scrollbar"
      >
        <div
          class="thumb"
          style="transform: translateY(0%); height: 0%;"
        />
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`AddAssetSearch.vue [No Tokens Found]: should be rendered correctly 1`] = `
<div
  class="add-asset-token"
>
  <div
    class="add-asset-token__page"
  >
    <search-input-stub
      autofocus="true"
      class="add-asset-token__search"
      maxlength="100"
      placeholder="Search by Asset ID, Name or Ticker Symbol"
      value="123456"
    />
     
    <div
      class="add-asset-token__switch-btn"
    >
      <s-switch-stub
        activeiconСlass=""
        activetext=""
        activevalue="true"
        inactiveiconСlass=""
        inactivetext=""
        name=""
        usedesignsystem="true"
        value="true"
        width="40"
      />
       
      <span>
        Verified assets only
      </span>
    </div>
     
    <synthetic-switcher-stub
      class="add-asset-token__switch-btn"
    />
     
    <div
      class="asset-list asset-search-list"
    >
      <recycle-scroller
        buffer="NaN"
        class="asset-list-inner hidden-scrollbar"
        item-size="NaN"
        items=""
        key-field="address"
        style="margin-right: 0px;"
      />
       
      <div
        class="scrollbar asset-list-scrollbar"
      >
        <div
          class="thumb"
          style="transform: translateY(0%); height: 0%;"
        />
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`AddAssetSearch.vue [Token is Found]: should be rendered correctly 1`] = `
<div
  class="add-asset-token"
>
  <div
    class="add-asset-token__page"
  >
    <search-input-stub
      autofocus="true"
      class="add-asset-token__search"
      maxlength="100"
      placeholder="Search by Asset ID, Name or Ticker Symbol"
      value="TEST"
    />
     
    <div
      class="add-asset-token__switch-btn"
    >
      <s-switch-stub
        activeiconСlass=""
        activetext=""
        activevalue="true"
        inactiveiconСlass=""
        inactivetext=""
        name=""
        usedesignsystem="true"
        value="true"
        width="40"
      />
       
      <span>
        Verified assets only
      </span>
    </div>
     
    <synthetic-switcher-stub
      class="add-asset-token__switch-btn"
    />
     
    <div
      class="asset-list asset-search-list"
    >
      <recycle-scroller
        buffer="NaN"
        class="asset-list-inner hidden-scrollbar"
        item-size="NaN"
        items=""
        key-field="address"
        style="margin-right: 0px;"
      />
       
      <div
        class="scrollbar asset-list-scrollbar"
      >
        <div
          class="thumb"
          style="transform: translateY(0%); height: 0%;"
        />
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;
